fix: percentage cause overflow

--- a/src/assets/customTheme.css
+++ b/src/assets/customTheme.css
@@ -298,3 +298,7 @@ img {
 .hero-section hgroup>p {
     margin-bottom: var(--pico-spacing);
 }
+
+.no-wrap {
+    white-space: nowrap;
+}
